# fserve

./: .gitignore  Cargo.toml  PKGBUILD  go.mod  main.go  readme.md
src/: main.rs
