[package]
name = "fserve"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.10", default-features = false, features = ["http1", "json"] }
tokio = { version = "1.19.2", default-features = false, features = ["macros"] }
tower-http = { version = "0.3.4", default-features = false, features = ["fs"] }
